# microformer

./: README.md  pyproject.toml
ablation/: results.py  run_ablation.py
microformer/: __init__.py  attention.py  attention_variants.py  block.py  config.py  eval.py  eval_config.py  feedforward.py  kv_cache.py  model.py  rope.py  server.py  tokenizer.py  train_config.py  trainer.py
microformer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_attention.py  test_attention_variants.py  test_block.py  test_eval.py  test_feedforward.py  test_model.py  test_rope.py  test_server.py  test_tokenizer.py  test_trainer.py
